@@ -28,8 +28,10 @@ SIGNATURE
 t/Map-Tube-Malaga/01-use.t
 t/Map-Tube-Malaga/02-version.t
 t/Map-Tube-Malaga/03-map.t
-t/Map-Tube-Malaga/04-get_shortest_route.t
-t/Map-Tube-Malaga/05-name.t
-t/Map-Tube-Malaga/06-xml.t
+t/Map-Tube-Malaga/04-get_node_by_id.t
+t/Map-Tube-Malaga/05-get_node_by_name.t
+t/Map-Tube-Malaga/06-get_shortest_route.t
+t/Map-Tube-Malaga/07-name.t
+t/Map-Tube-Malaga/08-xml.t
 xt/Map-Tube-Malaga/01-pod_coverage.t
 xt/Map-Tube-Malaga/02-pod.t
