@@ -1,5 +1,6 @@
 0.15
  - Add EXAMPLE4 to doc.
+ - Add tests for get_node_by_id() and get_node_by_name() methods.
 
 0.14 2015-09-22T22:19:45+02:00
  - Move author tests to xt/ directory.
